          (thanks to A M).
- TI-78   Tag parsing broken for tags starting with "or_"
          (thanks to Lukas Barth).
- TI-81   Allow correction with filtered ids
          (thanks to Plup)
- TI-85   :adjust creates overlapping interval
          (thanks to Tim Ruffing)
- TI-90   Let 'continue' accept a date or a date range
- TI-91   Timewarrior does not compile on DragonFly
          (thanks to Michael Neumann).
- Fixed Python 3 support of the holiday/refresh script
          (thanks to Jelle van der Waa).
- Added missing man page link
          (thanks to David Patrick).
- Taskwarrior projects are now used as-is as tags, and also split on the '.' to
  represent project hierarchy as separate tags.
          (thanks to Josh Proehl).
- New date names supported (see 'timew help date' or 'man timew').
- Named dates 'socw', 'socm', 'socq' and 'socy' are now named 'sow', 'som',
  'soq' and 'soy'. Similarly the 'eocw' etc are modified. The 'c' is now
  implicit.

------ old release -------------------------------

1.0.0 (2016-08-17) 6428ce89fcf2a5665d9351c50c2a84c98543206c

- WWW-12  yesterday tag not recognized
          (thanks to Michel Crucifix).
- TI-34   Make timew more user-friendly by adding --help and default output
          (thanks to Felix Wolfsteller).
- Added 'totals.py' sample extension.
- Added extension list to the 'help' command.

1.0.0.beta1 (2016-07-26) -

- TI-9    Task spanning over whole day should show up as taking 24:00 instead
          of 23:59
          (thanks to Tomas Babej).
- TI-10   The 'total' summands in the month report are not aligned with the
          column name
          (thanks to Tomas Babej).
- TI-11   Ids displayed incorrectly
          (thanks to Michael Meier).
- TI-12   report command does not find extensions
          (thanks to lumbric).
- TI-14   Warn when new tags are being created
          (thanks to Matthias Rieber).
- TI-16   Should handle case where taskwarrior hook is used before timew